Make subject clickable

--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,9 @@
 <div class="post">
   <div class="post-heading">
     <div class="post-title">
-      {{p.subject}}
+      <a href="/blog/{{p.key().id()}}">
+        {{p.subject}}
+      </a>
     </div>
 
     <div class="post-date">
