--- a/templates/permalink.html
+++ b/templates/permalink.html
@@ -2,4 +2,9 @@
 
 {% block content %}
   {{post.render() | safe}}
+  <br>
+  <form method="post">
+    <input type="submit" name="edit" value="Edit">
+    <input type="submit" name="delete" value="Delete">
+  </form>
 {% endblock %}
