Clean up a bit. Breaks Unit 2. Enable https.

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,7 @@
   </head>
 
   <body>
-    <a href="/unit2/rot13">Unit 2 - Rot13</a>
-    <br>
-    <a href="/unit2/signup">Unit 2 - Signup</a>
-    <br>
-    <a href="/blog">Unit 3 - Blog</a>
+    <a href="/blog">Blog</a>
   </body>
 
 </html>
