--- a/templates/front.html
+++ b/templates/front.html
@@ -2,9 +2,11 @@
 
 {% block content %}
 
+  {% if user %}
   <div class="new-post">
     <a href="/blog/newpost"> New Post</a>
   </div>
+  {% endif %}
   {% for p in posts %}
     {{ p.render() | safe }}
     <br><br>
