RSS Feed support and fix a json routing bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <link type="text/css" rel="stylesheet" href="/static/main.css" />
-
+  <link rel="alternate" type="application/rss+xml" title="CS253 RSS" href="/blog/feed" />
   <title>CS 253 Blog</title>
 </head>
 
